<resources>
    <string name="app_name">Genshin Infos</string>
    <string name="title_activity_register">RegisterActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="password">Senha</string>
    <string name="e_mail">E-mail</string>
    <string name="enter">Entrar</string>
    <string name="register">Cadastre-se</string>
    <string name="todo">TODO</string>
    <string name="senha">Senha</string>
    <string name="cadastrar">Cadastrar</string>
    <string name="nome">Nome</string>
    <string name="clique_aqui_para_voltar_ao_login">Clique aqui para voltar ao login!</string>
    <string name="logout">Logout</string>
</resources>